update chap10; update exam1 info

--- a/grades.ipynb
+++ b/grades.ipynb
@@ -2,57 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradebook = pd.read_csv(\"~/Downloads/2022-11-01T2219_Grades-STAT_3011_(006).csv\")\n",
-    "exam1A = pd.read_csv(\"~/Downloads/Exam1A_Fall_22_scores.csv\")"
+    "grade_dir = \"/Users/yuyang/Documents/Courses/22Fall/STAT3011/exams/exam1/grades\"\n",
+    "gradebook = pd.read_csv(os.path.join(grade_dir, \"2022-11-01T2219_Grades-STAT_3011_(006).csv\"))\n",
+    "exam1A = pd.read_csv(os.path.join(grade_dir, \"Exam1A_Fall_22_scores.csv\"))\n",
+    "exam1B = pd.read_csv(os.path.join(grade_dir, \"Exam1B_Fall_22_scores.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exam1A = exam1A[[\"SID\", \"Total Score\"]]\n",
     "gradebook = gradebook.merge(exam1A, how=\"left\", left_on=\"SIS User ID\", right_on=\"SID\")\n",
     "gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"] = np.where(gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"].isnull(), \n",
     "    gradebook[\"Total Score\"],\n",
     "    gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"])\n",
-    "gradebook.drop(columns = [\"SID\", \"Total Score\"], inplace = True)"
+    "gradebook.drop(columns = [\"SID\", \"Total Score\"], inplace = True)\n",
+    "\n",
+    "exam1B = exam1B[[\"SID\", \"Total Score\"]]\n",
+    "gradebook = gradebook.merge(exam1B, how=\"left\", left_on=\"SIS User ID\", right_on=\"SID\")\n",
+    "gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"] = np.where(gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"].isnull(), \n",
+    "    gradebook[\"Total Score\"],\n",
+    "    gradebook[\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"])\n",
+    "gradebook.drop(columns = [\"SID\", \"Total Score\"], inplace = True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradebook.to_csv(\"~/Downloads/updated_grades.csv\", index = False)"
+    "gradebook.to_csv(os.path.join(grade_dir, \"updated_grades.csv\"), index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -76,7 +82,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "612edd02ea10f8045fe3ea1eed1e852e0848ef3d3ad745dfc1e38e2bb3f9d911"
+    "hash": "1159beeaf7bb1a5190ac145a9c773be02b0fbbc2bad89028a2d987d9e555ec4f"
    }
   }
  },
