curve exam 2 grades; update wed plan

--- a/grades.ipynb
+++ b/grades.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exam 1"
    ]
   },
   {
@@ -61,6 +68,78 @@
    "source": [
     "gradebook.to_csv(os.path.join(grade_dir, \"curved_grades.csv\"), index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exam 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grade_dir = \"/Users/yuyang/Documents/Courses/22Fall/STAT3011/exams/exam2/grades\"\n",
+    "gradebook = pd.read_csv(os.path.join(grade_dir, \"2022-12-05T1545_Grades-STAT_3011_(006).csv\"))\n",
+    "exam1A = pd.read_csv(os.path.join(grade_dir, \"Fall_22_Exam_2A_scores.csv\"))\n",
+    "exam1B = pd.read_csv(os.path.join(grade_dir, \"Fall_22_Exam_2B_scores.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# curve version A\n",
+    "exam1A = exam1A[[\"SID\", \"Total Score\"]]\n",
+    "exam1A[\"Total Score\"] = np.sqrt(exam1A[\"Total Score\"] - 2) * 10\n",
+    "gradebook = gradebook.merge(exam1A, how=\"left\", left_on=\"SIS User ID\", right_on=\"SID\")\n",
+    "gradebook[\"Mid-term Exam 2 (Thursday, 11/17, 5:00 - 6:30 pm, Anderson Hall 310) (2758468)\"] = np.where(gradebook[\"Total Score\"].isnull(), \n",
+    "    gradebook[\"Mid-term Exam 2 (Thursday, 11/17, 5:00 - 6:30 pm, Anderson Hall 310) (2758468)\"], \n",
+    "    gradebook[\"Total Score\"])\n",
+    "gradebook.drop(columns = [\"SID\", \"Total Score\"], inplace = True)\n",
+    "\n",
+    "# curve version B\n",
+    "exam1B = exam1B[[\"SID\", \"Total Score\"]]\n",
+    "exam1B[\"Total Score\"] = np.minimum(np.sqrt(exam1B[\"Total Score\"] + 6) * 10, 100)\n",
+    "gradebook = gradebook.merge(exam1B, how=\"left\", left_on=\"SIS User ID\", right_on=\"SID\")\n",
+    "gradebook[\"Mid-term Exam 2 (Thursday, 11/17, 5:00 - 6:30 pm, Anderson Hall 310) (2758468)\"] = np.where(gradebook[\"Total Score\"].isnull(),  \n",
+    "    gradebook[\"Mid-term Exam 2 (Thursday, 11/17, 5:00 - 6:30 pm, Anderson Hall 310) (2758468)\"], \n",
+    "    gradebook[\"Total Score\"])\n",
+    "gradebook.drop(columns = [\"SID\", \"Total Score\"], inplace = True)\n",
+    "\n",
+    "# # curve Version C\n",
+    "# VersionC_students = set(gradebook[\"SIS User ID\"]) - set(exam1A[~exam1A[\"Total Score\"].isnull()][\"SID\"]) - set(exam1B[~exam1B[\"Total Score\"].isnull()][\"SID\"])\n",
+    "# VersionC_students = {x for x in VersionC_students if x == x}\n",
+    "# gradebook.loc[gradebook[\"SIS User ID\"].isin(VersionC_students), \"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"] = np.sqrt(gradebook[gradebook[\"SIS User ID\"].isin(VersionC_students)][\"Mid-term Exam 1 (Thursday, 10/20, 5:00 - 6:30 pm Anderson Hall 310) (2758466)\"] + 4) * 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradebook.to_csv(os.path.join(grade_dir, \"curved_grades.csv\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
